--- a/assets/book/styles/components/pages/_chapters.scss
+++ b/assets/book/styles/components/pages/_chapters.scss
@@ -17,6 +17,7 @@
     font-size: $section-license-font-size;
     font-style: $section-license-font-style;
     margin-top: $section-license-margin-top;
+    page-break-inside: avoid;
   }
 
   img {
