--- a/assets/book/styles/components/pages/_front-matter.scss
+++ b/assets/book/styles/components/pages/_front-matter.scss
@@ -74,6 +74,7 @@ div.epigraph {
     font-size: $section-license-font-size;
     font-style: $section-license-font-style;
     margin-top: $section-license-margin-top;
+    page-break-inside: avoid;
   }
 
   img {
