--- a/assets/legacy/styles/_epub-house-style.scss
+++ b/assets/legacy/styles/_epub-house-style.scss
@@ -279,6 +279,7 @@ div.sidebar {
     font-size: 0.8em;
     font-style: italic;
     margin-top: 2em;
+    page-break-inside: avoid;
   }
 
   .license-attribution img {
